--- a/001.Two_Sum.md
+++ b/001.Two_Sum.md
@@ -1,7 +1,5 @@
-### 001.Two Sum
+### 001.Two Sum ([link](https://leetcode.com/problems/two-sum/))
 #### ![](https://img.shields.io/badge/Tag-Array-brightgreen.svg) ![](https://img.shields.io/badge/Difficult-Easy-brightgreen.svg)
-#### Difficult: Easy
-#### Problem: 
 ### 1.1 Basic method
 **Idea**:  
 **Time Complexity**:  
