--- a/001.Two_Sum.md
+++ b/001.Two_Sum.md
@@ -1,8 +1,9 @@
 ### 001.Two Sum ([link](https://leetcode.com/problems/two-sum/))
 #### ![](https://img.shields.io/badge/Tag-Array-brightgreen.svg) ![](https://img.shields.io/badge/Difficult-Easy-brightgreen.svg)
 ### 1.1 Basic method
-**Idea**:  
-**Time Complexity**:  
+**Idea**:  Loop the list nums, and try to find if sum of the item and one of next items equal to the target. If the sum is equal to the target, return it.
+**Time Complexity**:  <img src="http://www.sciweavers.org/tex2img.php?eq=%20O%28n%5E%7B2%7D%20%29&bc=White&fc=Black&im=jpg&fs=12&ff=arev&edit=0" align="center" border="0" alt=" O(n^{2} )" width="50" height="21" />
+
 ``` python
 class Solution:
     def twoSum(self, nums, target):
@@ -12,3 +13,11 @@ class Solution:
                 if nums[i] + nums[j] == target:
                     return[i,j]
 ```
+
+### 1.2 Fastest method
+
+
+### 1.3 Shortest method
+
+
+### 1.4 Summary
