--- a/001.Two_Sum.md
+++ b/001.Two_Sum.md
@@ -3,7 +3,7 @@
 ### 1.1 Basic method
 **Idea**:  Loop the list nums, and try to find if sum of the item and one of next items equal to the target. If the sum is equal to the target, return it.
 **Time Complexity**:  <img src="http://www.sciweavers.org/tex2img.php?eq=%20O%28n%5E%7B2%7D%20%29&bc=White&fc=Black&im=jpg&fs=12&ff=arev&edit=0" align="center" border="0" alt=" O(n^{2} )" width="50" height="21" />
-
+<img src="http://www.sciweavers.org/tex2img.php?eq=%20O%28n%5E%7B2%7D%29%20&bc=White&fc=Black&im=png&fs=12&ff=arev&edit=0" align="center" border="0" alt=" O(n^{2}) " width="50" height="21" />
 ``` python
 class Solution:
     def twoSum(self, nums, target):
