Transform into md

--- a/001.Two_Sum.md
+++ b/001.Two_Sum.md
@@ -1,9 +1,9 @@
 ### 001.Two Sum ([link](https://leetcode.com/problems/two-sum/))
 #### ![](https://img.shields.io/badge/Tag-Array-brightgreen.svg) ![](https://img.shields.io/badge/Difficult-Easy-brightgreen.svg)
 ### 1.1 Basic method
-**Idea**:  Loop the list nums, and try to find if sum of the item and one of next items equal to the target. If the sum is equal to the target, return it.
-**Time Complexity**:  <img src="http://www.sciweavers.org/tex2img.php?eq=%20O%28n%5E%7B2%7D%20%29&bc=White&fc=Black&im=jpg&fs=12&ff=arev&edit=0" align="center" border="0" alt=" O(n^{2} )" width="50" height="21" />
-<img src="http://www.sciweavers.org/tex2img.php?eq=%20O%28n%5E%7B2%7D%29%20&bc=White&fc=Black&im=png&fs=12&ff=arev&edit=0" align="center" border="0" alt=" O(n^{2}) " width="50" height="21" />
+**Idea**:  Loop the list nums, and try to find if sum of the item and one of next items equal to the target. If the sum is equal to the target, return it.  
+**Time Complexity**: <img src="http://www.sciweavers.org/tex2img.php?eq=%20O%28n%5E%7B2%7D%20%29&bc=White&fc=Black&im=jpg&fs=12&ff=arev&edit=0" align="center" border="0" alt=" O(n^{2} )" width="50" height="21" />  
+
 ``` python
 class Solution:
     def twoSum(self, nums, target):
@@ -15,9 +15,32 @@ class Solution:
 ```
 
 ### 1.2 Fastest method
+**Idea**: Create a dictionary(index) store the value:index pair, if the difference in the dictionary, just return; else update the dictionary. This method is just loop nums once. And can skip the situation that the item and the difference is the same, since the first time come across the item, the difference(item itself) isn't in the dictionary.
+**Time Complexity**: <img src="http://www.sciweavers.org/tex2img.php?eq=%20O%28n%29&bc=White&fc=Black&im=jpg&fs=12&ff=arev&edit=0" align="center" border="0" alt=" O(n)" width="42" height="18" />
 
+``` python
+class Solution:
+    def twoSum(self, nums, target):
+        # Fastest Method
+        index = {}
+        for key, value in enumerate(nums):
+            if target-value in index:
+                return [index[target-value], key]
+            # Update the dictionary
+            index[value] = key
+```
 
 ### 1.3 Shortest method
+**Idea**: Try to find the difference in the remaining list, and return the index pair. This method can skip the situation that the difference is the same as the item.
+**Time Complexity**: <img src="http://www.sciweavers.org/tex2img.php?eq=%20O%28n%5E%7B2%7D%20%29&bc=White&fc=Black&im=jpg&fs=12&ff=arev&edit=0" align="center" border="0" alt=" O(n^{2} )" width="50" height="21" />  
 
+``` python
+class Solution:
+    def twoSum(self, nums, target):
+        # Shortest Method
+        for i,v in enumerate(nums):        
+            try: return [i, nums[i+1:].index(target-v)+i+1]
+            except: pass
+```
 
 ### 1.4 Summary
