--- a/001.Two_Sum.md
+++ b/001.Two_Sum.md
@@ -2,7 +2,7 @@
 #### ![](https://img.shields.io/badge/Tag-Array-brightgreen.svg) ![](https://img.shields.io/badge/Difficult-Easy-brightgreen.svg)
 ### 1.1 Basic method
 **Idea**:  Loop the list nums, and try to find if sum of the item and one of next items equal to the target. If the sum is equal to the target, return it.  
-**Time Complexity**: <img src="http://www.sciweavers.org/tex2img.php?eq=%20O%28n%5E%7B2%7D%20%29&bc=White&fc=Black&im=jpg&fs=12&ff=arev&edit=0" align="center" border="0" alt=" O(n^{2} )" width="50" height="21" />  
+**Time Complexity**: O(n^2)
 
 ``` python
 class Solution:
@@ -16,7 +16,7 @@ class Solution:
 
 ### 1.2 Fastest method
 **Idea**: Create a dictionary(index) store the value:index pair, if the difference in the dictionary, just return; else update the dictionary. This method is just loop nums once. And can skip the situation that the item and the difference is the same, since the first time come across the item, the difference(item itself) isn't in the dictionary.  
-**Time Complexity**: <img src="http://www.sciweavers.org/tex2img.php?eq=%20O%28n%29&bc=White&fc=Black&im=jpg&fs=12&ff=arev&edit=0" align="center" border="0" alt=" O(n)" width="42" height="18" />
+**Time Complexity**: O(n)
 
 ``` python
 class Solution:
@@ -32,8 +32,7 @@ class Solution:
 
 ### 1.3 Shortest method
 **Idea**: Try to find the difference in the remaining list, and return the index pair. This method can skip the situation that the difference is the same as the item.  
-**Time Complexity**: <img src="http://www.sciweavers.org/tex2img.php?eq=%20O%28n%5E%7B2%7D%29&bc=White&fc=Black&im=jpg&fs=12&ff=arev&edit=0" align="center" border="0" alt=" O(n^{2})" width="50" height="21" />  
-
+**Time Complexity**: O(n^2)
 ``` python
 class Solution:
     def twoSum(self, nums, target):
@@ -45,4 +44,4 @@ class Solution:
 
 ### 1.4 Summary
 1. Try to use dictionary to store some information you may use later.
-2. Time Complexity of list.index(i) is <img src="http://www.sciweavers.org/tex2img.php?eq=%20O%28n%29&bc=White&fc=Black&im=jpg&fs=12&ff=arev&edit=0" align="center" border="0" alt=" O(n)" width="42" height="18" />
+2. Time Complexity of list.index(i) is O(n) [reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python)
