--- a/001.Two_Sum.md
+++ b/001.Two_Sum.md
@@ -44,4 +44,4 @@ class Solution:
 
 ### 1.4 Summary
 1. Try to use dictionary to store some information you may use later.
-2. Time Complexity of list.index(i) is O(n) [reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python)
+2. Time Complexity of ```list.index(i)``` is O(n) ([reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python))
