--- a/001.Two_Sum.md
+++ b/001.Two_Sum.md
@@ -15,7 +15,7 @@ class Solution:
 ```
 
 ### 1.2 Fastest method
-**Idea**: Create a dictionary(index) store the value:index pair, if the difference in the dictionary, just return; else update the dictionary. This method is just loop nums once. And can skip the situation that the item and the difference is the same, since the first time come across the item, the difference(item itself) isn't in the dictionary.  
+**Idea**: Create a dictionary store the value:index pair, if the difference in the dictionary, just return; else update the dictionary. This method is just loop nums once. And can skip the situation that the item and the difference is the same, since the first time come across the item, the difference(item itself) isn't in the dictionary.  
 **Time Complexity**: O(n)
 
 ``` python
@@ -43,5 +43,5 @@ class Solution:
 ```
 
 ### 1.4 Summary
-1. Try to use dictionary to store some information you may use later.
+1. Try to use **dictionary** to store some information you may use later.
 2. Time Complexity of ```list.index(i)``` is O(n) ([reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python))
