--- a/026.Remove_Duplicates_from_Sorted_Array.md
+++ b/026.Remove_Duplicates_from_Sorted_Array.md
@@ -14,7 +14,7 @@ class Solution:
         return len(nums)
 ```
 
-### 1.2 Fastest method
+### 26.2 Fastest method
 **Idea**: 
 **Time Complexity**: O(n)
 
@@ -37,7 +37,7 @@ class Solution:
         return index + 1
 ```
 
-### 1.3 Shortest method
+### 26.3 Shortest method
 **Idea**: 
 **Time Complexity**: 
 
@@ -45,10 +45,12 @@ class Solution:
 
 ```
 
-### 1.4 Summary
-1. When you modify a list (insert or remove items) during iteration, the result maybe incorrect. Since the index of items has already updated after you modify (insert or remove) the list, you may skip some items you want to process. There are two ways I prefer to solve this kind of problem: 1. iterate the list in reverse; 2. Use while loop and don't increment i when i remove an item in this problem (like 26.1).  
-For example:
+### 26.4 Summary
+1. When you modify a list (insert or remove items) during iteration, the result maybe incorrect. Since the index of items has already updated after you modify (insert or remove) the list, you may skip some items you want to process. There are two ways I prefer to solve this kind of problem: 
+    1. iterate the list in reverse; 
+    2. Use while loop and don't increment i when i remove an item in this problem (like 26.1).  
 
+For example:
 ``` python
 class Solution:
     def removeDuplicates(self, nums: List[int]) -> int:
@@ -58,5 +60,12 @@ class Solution:
                 nums.pop(i)    
 ```
 
-1. pop remove anything process the list in-place
+2. List methods comparison:  
+| Method | in-place or not | Time Complexity |
+|:-|-|-:|
+| 居左测试文本 | 居中测试文本 | 居右测试文本 |
+| 居左测试文本 1 | 居中测试文本 2 | 居右测试文本 3|
+| 居左测试文本 11 | 居中测试文本 22 | 居右测试文本 33|
+| 居左测试文本 111 | 居中测试文本 222 | 居右测试文本 333|
+pop remove anything process the list in-place
 2. Time Complexity of list.pop(i) is 
