--- a/026.Remove_Duplicates_from_Sorted_Array.md
+++ b/026.Remove_Duplicates_from_Sorted_Array.md
@@ -61,11 +61,11 @@ class Solution:
 ```
 
 2. List methods comparison:  
-| Method | in-place or not | Time Complexity |
-|:-|-|-:|
-| 居左测试文本 | 居中测试文本 | 居右测试文本 |
-| 居左测试文本 1 | 居中测试文本 2 | 居右测试文本 3|
-| 居左测试文本 11 | 居中测试文本 22 | 居右测试文本 33|
-| 居左测试文本 111 | 居中测试文本 222 | 居右测试文本 333|
+| Left-aligned | Center-aligned | Right-aligned |
+| :---         |     :---:      |          ---: |
+| git status   | git status     | git status    |
+| git diff     | git diff       | git diff      |
+
+ 
 pop remove anything process the list in-place
 2. Time Complexity of list.pop(i) is 
