--- a/001.Two_Sum.md
+++ b/001.Two_Sum.md
@@ -38,7 +38,7 @@ class Solution:
     def twoSum(self, nums, target):
         # Shortest Method
         for i,v in enumerate(nums):        
-            try: return [i, nums[i+1:].index(target-v)+i+1]
+            try: return [i, nums.index(target-v,i+1,)]
             except: pass
 ```
 
