--- a/026.Remove_Duplicates_from_Sorted_Array.md
+++ b/026.Remove_Duplicates_from_Sorted_Array.md
@@ -62,11 +62,15 @@ class Solution:
 
 2. List methods comparison:  
 
-| Left-aligned | Center-aligned | Right-aligned |  
-| :---         |     :---:      |          ---: |  
-| git status   | git status     | git status    |  
-| git diff     | git diff       | git diff      |  
-
+| Method Name | Time Complexity | In-place or Not |  
+| --- | --- | --- |  
+| append(x) | O(1) | in-place    |  
+| insert(i, x) | O(n) | in-place |  
+| remove(x) | O(n) | \ |  
+| pop([i]) | last:O(1),intermediate:O(k) | in-place |  
+| index(x[, start[, end]]) | O(n) | \ |
+| count(x) | O(n) | \ |
+| sort(key=None, reverse=False) | O(nlogn) | in-place |  
+| reverse() | O(n) | in-place |  
+| copy() | O(n) | \ |  
  
-pop remove anything process the list in-place
-2. Time Complexity of list.pop(i) is 
