--- a/026.Remove_Duplicates_from_Sorted_Array.md
+++ b/026.Remove_Duplicates_from_Sorted_Array.md
@@ -15,12 +15,13 @@ class Solution:
 ```
 
 ### 26.2 Fastest method
-**Idea**: 
+**Idea**: Since the list is sorted, then replace the item which is duplicate. And this method doesn't change the length of list.  
 **Time Complexity**: O(n)
 
 ``` python
 class Solution:
     def removeDuplicates(self, nums: List[int]) -> int:
+        # Fastest Method
         if len(nums) == 0:
             return 0
         if len(nums) == 1:
@@ -66,11 +67,13 @@ class Solution:
 | --- | --- | --- |  
 | append(x) | O(1) | in-place    |  
 | insert(i, x) | O(n) | in-place |  
-| remove(x) | O(n) | \ |  
+| remove(x) | O(n) | in-place |  
 | pop([i]) | last:O(1),intermediate:O(k) | in-place |  
 | index(x[, start[, end]]) | O(n) | \ |
 | count(x) | O(n) | \ |
 | sort(key=None, reverse=False) | O(nlogn) | in-place |  
 | reverse() | O(n) | in-place |  
 | copy() | O(n) | \ |  
+
+The costs of list.remove(x) and list.pop([i]) is very different. 
  
