--- a/0001.Two_Sum.md
+++ b/0001.Two_Sum.md
@@ -1,7 +1,8 @@
-### 001.Two Sum ([link](https://leetcode.com/problems/two-sum/))
+### 0001.Two Sum ([link](https://leetcode.com/problems/two-sum/))
 #### ![](https://img.shields.io/badge/Tag-Array-brightgreen.svg) ![](https://img.shields.io/badge/Difficult-Easy-brightgreen.svg)
 ### 1.1 Basic method
-**Idea**:  Loop the list nums, and try to find if sum of the item and one of next items equal to the target. If the sum is equal to the target, return it.  
+**Idea**:  Loop the list nums, and try to find if sum of the item and one of next items equal to the target. If the sum is equal to the target, return index of these two items.  
+
 **Time Complexity**: O(n^2)
 
 ``` python
