--- a/0001.Two_Sum.md
+++ b/0001.Two_Sum.md
@@ -7,7 +7,7 @@
 
 ``` python
 class Solution:
-    def twoSum(self, nums, target):
+    def twoSum(self, nums: List[int], target: int) -> List[int]:
         # Basic Method
         for i in range(len(nums)):
             for j in range(i+1, len(nums)):
@@ -16,12 +16,13 @@ class Solution:
 ```
 
 ### 1.2 Fastest method
-**Idea**: Create a dictionary store the value:index pair, if the difference in the dictionary, just return; else update the dictionary. This method is just loop nums once. And can skip the situation that the item and the difference is the same, since the first time come across the item, the difference(item itself) isn't in the dictionary.  
+**Idea**: Create a dictionary stores the value:index pair incrementally, if the difference between target and an item is in the dictionary, then return index, or update the dictionary. This method is just loop nums once. And can skip the situation that one item equal to the difference between target and itself, since the first time come across the item, the difference(item itself) isn't in the dictionary.  
+
 **Time Complexity**: O(n)
 
 ``` python
 class Solution:
-    def twoSum(self, nums, target):
+    def twoSum(self, nums: List[int], target: int) -> List[int]:
         # Fastest Method
         dic = {}
         for i, v in enumerate(nums):
@@ -33,12 +34,22 @@ class Solution:
 
 ### 1.3 Shortest method
 **Idea**: Try to find the difference in the remaining list, and return the index pair. This method can skip the situation that the difference is the same as the item.  
+
 **Time Complexity**: O(n^2)
+
 ``` python
 class Solution:
-    def twoSum(self, nums, target):
+    def twoSum(self, nums: List[int], target: int) -> List[int]:
         # Shortest Method
-        for i,v in enumerate(nums):        
+        for i,v in enumerate(nums):
+            try: return [i, nums.index(target-v,i+1,)]
+            except: pass
+```
+
+``` python
+class Solution:
+    def twoSum(self, nums: List[int], target: int) -> List[int]:
+        for i,v in enumerate(nums):
             try: return [i, nums.index(target-v,i+1,)]
             except: pass
 ```
