--- a/0001.Two_Sum.md
+++ b/0001.Two_Sum.md
@@ -1,9 +1,9 @@
 ### 0001.Two Sum ([link](https://leetcode.com/problems/two-sum/))
-#### ![](https://img.shields.io/badge/Tag-Array-brightgreen.svg) ![](https://img.shields.io/badge/Difficult-Easy-brightgreen.svg)
+#### ![](https://img.shields.io/badge/Tag-Array-brightgreen.svg) ![](https://img.shields.io/badge/Difficult-Easy-brightgreen.svg) ![](https://img.shields.io/badge/Python-3.7-yellow.svg)
 ### 1.1 Basic method
 **Idea**:  Loop the list nums, and try to find if sum of the item and one of next items equal to the target. If the sum is equal to the target, return index of these two items.  
 
-**Time Complexity**: O(n^2)
+**Time Complexity**: ```O(n^2)```
 
 ``` python
 class Solution:
@@ -32,7 +32,7 @@ class Solution:
             dic[v] = i
 ```
 
-### 1.3 Shortest method
+### 1.3 Shortest method (Code Golf)
 **Idea**: Try to find the difference in the remaining list, and return the index pair. This method can skip the situation that the difference is the same as the item.  
 
 **Time Complexity**: O(n^2)
@@ -49,6 +49,7 @@ class Solution:
 ``` python
 class Solution:
     def twoSum(self, nums: List[int], target: int) -> List[int]:
+        # Shortest Method
         for i,v in enumerate(nums):
             try: return [i, nums.index(target-v,i+1,)]
             except: pass
@@ -56,4 +57,4 @@ class Solution:
 
 ### 1.4 Summary
 1. Try to use **dictionary** to store some information you may use later.
-2. Time Complexity of ```list.index(i)``` is O(n) ([reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python))
+2. Try to avoid use list.index(), since time complexity of ```list.index(i)``` is O(n) ([reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python))
