--- a/0001.Two_Sum.md
+++ b/0001.Two_Sum.md
@@ -16,9 +16,9 @@ class Solution:
 ```
 
 ### 1.2 Fastest method
-**Idea**: Create a dictionary stores the value:index pair incrementally, if the difference between target and an item is in the dictionary, then return index, or update the dictionary. This method is just loop nums once. And can skip the situation that one item equal to the difference between target and itself, since the first time come across the item, the difference(item itself) isn't in the dictionary.  
+**Idea**: Create a dictionary stores the ```value:index``` pair incrementally, if the difference between target and an item is in the dictionary, then return index, or update the dictionary. This method is just loop nums once. And can skip the situation that one item equal to the difference between target and itself, since the first time come across the item, the difference(item itself) isn't in the dictionary.  
 
-**Time Complexity**: O(n)
+**Time Complexity**: ```O(n)```
 
 ``` python
 class Solution:
@@ -35,7 +35,7 @@ class Solution:
 ### 1.3 Shortest method (Code Golf)
 **Idea**: Try to find the difference in the remaining list, and return the index pair. This method can skip the situation that the difference is the same as the item.  
 
-**Time Complexity**: O(n^2)
+**Time Complexity**: ```O(n^2)```
 
 ``` python
 class Solution:
@@ -56,5 +56,10 @@ class Solution:
 ```
 
 ### 1.4 Summary
-1. Try to use **dictionary** to store some information you may use later.
-2. Try to avoid use list.index(), since time complexity of ```list.index(i)``` is O(n) ([reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python))
+1. Try to avoid use list.index(), since time complexity of ```list.index(i)``` is O(n) ([reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python)). Hashtable(dictionary) is more efficient.
+2. Ways to remove item from a list:
+``` python
+
+```
+    1.pop()
+    2.das)()
