--- a/0001.Two_Sum.md
+++ b/0001.Two_Sum.md
@@ -56,10 +56,7 @@ class Solution:
 ```
 
 ### 1.4 Summary
-1. Try to avoid use list.index(), since time complexity of ```list.index(i)``` is O(n) ([reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python)). Hashtable(dictionary) is more efficient.
+1. Try to avoid use ```list.index()```, since time complexity of ```list.index(i)``` is O(n) ([reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python)). Hashtable(dictionary) is more efficient.
 2. Ways to remove item from a list:
-``` python
-
-```
     1.pop()
     2.das)()
