--- a/0001.Two_Sum.md
+++ b/0001.Two_Sum.md
@@ -56,7 +56,13 @@ class Solution:
 ```
 
 ### 1.4 Summary
-1. Try to avoid use ```list.index()```, since time complexity of ```list.index(i)``` is O(n) ([reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python)). Hashtable(dictionary) is more efficient.
+1. Try to avoid use ```list.index()```, since time complexity of ```list.index(i)``` is O(n) ([reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python)). Hashtable(dictionary) is more efficient. ```list.index(x[, start[, end]])``` returns the index in the original list.
 2. Ways to remove item from a list:
-    1.pop()
-    2.das)()
+``` python
+1. list.pop([index]): The pop() method removes the item at the given index from the list and returns the removed item. Default is remove the last element.
+2. list.remove(element): The remove() method removes the first matching element (which is passed as an argument) from the list. Return None.
+3. Slice a list to remove item. list[:2] + list[3:].
+4. del list[10]. Return None.
+5. list.clear() will remove all items in a list.
+```
+3. ```enumerate``` is more efficient than ```range()``` or something when you want to loop a list and get the index of items.
