--- a/0001.Two_Sum.md
+++ b/0001.Two_Sum.md
@@ -1,7 +1,13 @@
 ### 0001.Two Sum ([link](https://leetcode.com/problems/two-sum/))
 #### ![](https://img.shields.io/badge/Tag-Array-brightgreen.svg) ![](https://img.shields.io/badge/Difficult-Easy-brightgreen.svg) ![](https://img.shields.io/badge/Python-3.7-yellow.svg)
+
+### Description
+Given an array of integers, return indices of the two numbers such that they add up to a specific target.
+
+You may assume that each input would have exactly one solution, and you may not use the same element twice.
+
 ### 1.1 Basic method
-**Idea**:  Loop the list nums, and try to find if sum of the item and one of next items equal to the target. If the sum is equal to the target, return index of these two items.  
+**Idea**:  Loop the list nums, and try to find if sum of the item and one of following items equal to the target. If the sum is equal to the target, return index of these two items.  
 
 **Time Complexity**: ```O(n^2)```
 
@@ -16,7 +22,7 @@ class Solution:
 ```
 
 ### 1.2 Fastest method
-**Idea**: Create a dictionary stores the ```value:index``` pair incrementally, if the difference between target and an item is in the dictionary, then return index, or update the dictionary. This method is just loop nums once. And can skip the situation that one item equal to the difference between target and itself, since the first time come across the item, the difference(item itself) isn't in the dictionary.  
+**Idea**: Try to create a dictionary stores the ```value:index``` pair, if the difference between target and an item is in the dictionary, then return index, if not then update the dictionary. This method is just loop nums once. And can skip the situation that one item equal to the difference between target and itself, since the first time come across the item, the difference(item itself) isn't in the dictionary.  
 
 **Time Complexity**: ```O(n)```
 
@@ -46,17 +52,9 @@ class Solution:
             except: pass
 ```
 
-``` python
-class Solution:
-    def twoSum(self, nums: List[int], target: int) -> List[int]:
-        # Shortest Method
-        for i,v in enumerate(nums):
-            try: return [i, nums.index(target-v,i+1,)]
-            except: pass
-```
 
 ### 1.4 Summary
-1. Try to avoid use ```list.index()```, since time complexity of ```list.index(i)``` is O(n) ([reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python)). Hashtable(dictionary) is more efficient. ```list.index(x[, start[, end]])``` returns the index in the original list.
+1. Try to avoid use ```list.index()```, since time complexity of ```list.index(i)``` is O(n) ([reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python)). ```list.index(x[, start[, end]])``` returns the index in the original list.
 2. Ways to remove item from a list:
 ``` python
 1. list.pop([index]): The pop() method removes the item at the given index from the list and returns the removed item. Default is remove the last element.
@@ -66,3 +64,4 @@ class Solution:
 5. list.clear() will remove all items in a list.
 ```
 3. ```enumerate``` is more efficient than ```range()``` or something when you want to loop a list and get the index of items.
+4. Hashtable(dictionary in Python) is more efficient.
