--- a/0035.Search_Insert_Position.md
+++ b/0035.Search_Insert_Position.md
@@ -1,8 +1,25 @@
-### 035.  ([link](https://leetcode.com/problems/search-insert-position/))
+### 0035.  ([link](https://leetcode.com/problems/search-insert-position/))
 #### ![](https://img.shields.io/badge/Tag-Array-brightgreen.svg) ![](https://img.shields.io/badge/Difficult-Easy-brightgreen.svg)
+
+### Description
+Given a sorted array and a target value, return the index if the target is found. If not, return the index where it would be if it were inserted in order.
+
+You may assume no duplicates in the array.
+
 ### 1.1 Basic method
-**Idea**:  
+**Idea**:  First, if the target is in nums, then return its index. If not, find the first element in nums which value is lager than target.  
 **Time Complexity**: 
+``` python
+class Solution:
+    def searchInsert(self, nums: List[int], target: int) -> int:
+        if target in nums:
+            return nums.index(target)
+        else:
+            for i in range(len(nums)):
+                if nums[i] > target:
+                    return i
+            return len(nums)
+```
 
 ``` python
 class Solution:
