--- a/0001.Two_Sum.md
+++ b/0001.Two_Sum.md
@@ -1,15 +1,14 @@
 ### 0001.Two Sum ([link](https://leetcode.com/problems/two-sum/))
 #### ![](https://img.shields.io/badge/Tag-Array-brightgreen.svg) ![](https://img.shields.io/badge/Difficult-Easy-brightgreen.svg) ![](https://img.shields.io/badge/Python-3.7-yellow.svg)
 
-### Description
-Given an array of integers, return indices of the two numbers such that they add up to a specific target.
+### Solution 1: Brute Force
+**Explanation**: 
+Traverse the given list from left to right, and calculate the sum of all combinations.
+If the sum is equal to the target, return index of these two items.
+There must be exactly one combination meet the requirement according to the constraints.
 
-You may assume that each input would have exactly one solution, and you may not use the same element twice.
-
-### 1.1 Basic method
-**Idea**:  Loop the list nums, and try to find if sum of the item and one of following items equal to the target. If the sum is equal to the target, return index of these two items.  
-
-**Time Complexity**: ```O(n^2)```
+**Time Complexity**: ```O(n^2)```  
+**Space Complexity**: ```O(1)```
 
 ``` python
 class Solution:
@@ -21,10 +20,16 @@ class Solution:
                     return[i,j]
 ```
 
-### 1.2 Fastest method
-**Idea**: Try to create a dictionary stores the ```value:index``` pair, if the difference between target and an item is in the dictionary, then return index, if not then update the dictionary. This method is just loop nums once. And can skip the situation that one item equal to the difference between target and itself, since the first time come across the item, the difference(item itself) isn't in the dictionary.  
+### Solution 2: Hash Table
+**Explanation**: 
+Traverse the given list from left to right and use a dictionary to record the traversal history. 
+The key is the value of traversed item, and the value is the index of the traversed item. 
+So, when you traverse to an item, then check if the difference between target and the item is in the dictionary.
+If YES, return the index of the traversed item and the value of the key in the dictionary.
+If NO, add the traversed item to dictionary.
 
-**Time Complexity**: ```O(n)```
+**Time Complexity**: ```O(n)```  
+**Space Complexity**: ```O(n)```
 
 ``` python
 class Solution:
@@ -38,30 +43,48 @@ class Solution:
             dic[v] = i
 ```
 
-### 1.3 Shortest method (Code Golf)
-**Idea**: Try to find the difference in the remaining list, and return the index pair. This method can skip the situation that the difference is the same as the item.  
+### Solution 3: One Line
+**Explanation**:
+Use list comprehension to solve this problem. 
 
 **Time Complexity**: ```O(n^2)```
+**Space Complexity**: ```O(1)```
 
 ``` python
 class Solution:
     def twoSum(self, nums: List[int], target: int) -> List[int]:
-        # Shortest Method
-        for i,v in enumerate(nums):
-            try: return [i, nums.index(target-v,i+1,)]
-            except: pass
+        # One line
+        return [[i,j] for i in range(len(nums)-1) for j in range(i+1, len(nums)) if nums[i]+nums[j]==target][0]
 ```
 
 
 ### 1.4 Summary
-1. Try to avoid use ```list.index()```, since time complexity of ```list.index(i)``` is O(n) ([reference](https://stackoverflow.com/questions/5913671/complexity-of-list-indexx-in-python)). ```list.index(x[, start[, end]])``` returns the index in the original list.
-2. Ways to remove item from a list:
-``` python
-1. list.pop([index]): The pop() method removes the item at the given index from the list and returns the removed item. Default is remove the last element.
-2. list.remove(element): The remove() method removes the first matching element (which is passed as an argument) from the list. Return None.
-3. Slice a list to remove item. list[:2] + list[3:].
-4. del list[10]. Return None.
-5. list.clear() will remove all items in a list.
-```
-3. ```enumerate``` is more efficient than ```range()``` or something when you want to loop a list and get the index of items.
-4. Hashtable(dictionary in Python) is more efficient.
+1. Use more space for less time. (空间换时间)
+2. ```enumerate``` is more useful than ```range()``` or ```for i in list:``` when you want to traverse a list and get the index and value of items.
+3. List methods comparison:  
+
+| Operation | Example | Complexity Class | In-place or Not | Notes |
+| --- | --- | --- | --- | --- |
+| Index | l[i] | O(1) | N/A | |
+| Store | l[i]=0 | O(1) | N/A | |
+| Length | len(l) | O(1) | N/A | |
+| Append | l.append(5) | O(1) | In-place | |
+| Pop | l.pop() | O(1) | In-place | |
+| Clear | l.clear() | O(1) | In-place | |
+| Slice | l[a:b] | O(b-a) | Not | |
+| Pop | l.pop(k) | O(k) | In-place | |
+| Extend | l.extend(...) | O(len(...)) | In-place | Only depends on len of entension |
+| Construction | list(...) | O(len(...)) | N/A | Depends on length of ... iterable |
+| Check ==, != | l1 == l2 | O(N) | N/A | |
+| Insert | l[a:b] = ... / l.insert(i,x)| O(N) | In-place | |
+| Delete | del l[i] | O(N) | In-place | Depends on i; O(N) in worst case |
+| Containment | x in/not in l | O(N) | N/A | linearly searches list |
+| Copy| l.copy() | O(N) | N/A | |
+| Remove | l.remove(...) | O(N) | In-place | |
+| Count | l.count(x) | O(N) | N/A | |
+| Index | l.index(x[, start[, end]]) | O(N) | N/A | |
+| Extreme value | min(l)/max(l) | O(N) | N/A | Linearly searches list for value |
+| Reverse | l.reverse() | O(N) | In-place | |
+| Iteration | for i in l: | O(N) | N/A | Worst: no return/break in loop |
+| Sort | l.sort() | O(NlogN) | In-place | |
+| Multiply | k*l | O(k N) | Not | |
