Removed Summary Bullet Number

--- a/0001.Two_Sum.md
+++ b/0001.Two_Sum.md
@@ -58,7 +58,7 @@ class Solution:
 ```
 
 
-### 1.4 Summary
+### Summary
 1. Use more space for less time. (空间换时间)
 2. ```enumerate``` is more useful than ```range()``` or ```for i in list:``` when you want to traverse a list and get the index and value of items.
 3. List methods comparison:  
