Removed Summary Bullet Number

--- a/0001.Two_Sum.md
+++ b/0001.Two_Sum.md
@@ -65,26 +65,26 @@ class Solution:
 
 | Operation | Example | Complexity Class | In-place or Not | Notes |
 | --- | --- | --- | --- | --- |
-| Index | l[i] | O(1) | N/A | |
-| Store | l[i]=0 | O(1) | N/A | |
-| Length | len(l) | O(1) | N/A | |
-| Append | l.append(5) | O(1) | In-place | |
-| Pop | l.pop() | O(1) | In-place | |
-| Clear | l.clear() | O(1) | In-place | |
-| Slice | l[a:b] | O(b-a) | Not | |
-| Pop | l.pop(k) | O(k) | In-place | |
-| Extend | l.extend(...) | O(len(...)) | In-place | Only depends on len of entension |
-| Construction | list(...) | O(len(...)) | N/A | Depends on length of ... iterable |
-| Check ==, != | l1 == l2 | O(N) | N/A | |
-| Insert | l[a:b] = ... / l.insert(i,x)| O(N) | In-place | |
-| Delete | del l[i] | O(N) | In-place | Depends on i; O(N) in worst case |
-| Containment | x in/not in l | O(N) | N/A | linearly searches list |
-| Copy| l.copy() | O(N) | N/A | |
-| Remove | l.remove(...) | O(N) | In-place | |
-| Count | l.count(x) | O(N) | N/A | |
-| Index | l.index(x[, start[, end]]) | O(N) | N/A | |
-| Extreme value | min(l)/max(l) | O(N) | N/A | Linearly searches list for value |
-| Reverse | l.reverse() | O(N) | In-place | |
-| Iteration | for i in l: | O(N) | N/A | Worst: no return/break in loop |
-| Sort | l.sort() | O(NlogN) | In-place | |
-| Multiply | k*l | O(k N) | Not | |
+| Index | ```l[i]``` | O(1) | N/A | |
+| Store | ```l[i]=0``` | O(1) | N/A | |
+| Length | ```len(l)``` | O(1) | N/A | |
+| Append | ```l.append(5)``` | O(1) | In-place | |
+| Pop | ```l.pop()``` | O(1) | In-place | |
+| Clear | ```l.clear()``` | O(1) | In-place | |
+| Slice | ```l[a:b]``` | O(b-a) | Not | |
+| Pop | ```l.pop(k)``` | O(k) | In-place | |
+| Extend | ```l.extend(...)``` | O(len(...)) | In-place | Only depends on len of entension |
+| Construction | ```list(...)``` | O(len(...)) | N/A | Depends on length of ... iterable |
+| Check ==, != | ```l1 == l2``` | O(N) | N/A | |
+| Insert | ```l[a:b] = ... / l.insert(i,x)```| O(N) | In-place | |
+| Delete | ```del l[i]``` | O(N) | In-place | Depends on i; O(N) in worst case |
+| Containment | ```x in/not in l``` | O(N) | N/A | linearly searches list |
+| Copy| ```l.copy()``` | O(N) | N/A | |
+| Remove | ```l.remove(...)``` | O(N) | In-place | |
+| Count | ```l.count(x)``` | O(N) | N/A | |
+| Index | ```l.index(x[, start[, end]])``` | O(N) | N/A | |
+| Extreme value | ```min(l)/max(l)``` | O(N) | N/A | Linearly searches list for value |
+| Reverse | ```l.reverse()``` | O(N) | In-place | |
+| Iteration | ```for i in l:``` | O(N) | N/A | Worst: no return/break in loop |
+| Sort | ```l.sort()``` | O(NlogN) | In-place | |
+| Multiply | ```k*l``` | O(k N) | Not | |
