--- a/0015.3Sum.md
+++ b/0015.3Sum.md
@@ -1,21 +1,75 @@
 ### 0015. 3Sum ([link](https://leetcode.com/problems/3sum/))
 #### ![](https://img.shields.io/badge/Tag-Array_TwoPointers-brightgreen.svg) ![](https://img.shields.io/badge/Difficult-Medium-brightgreen.svg)
-### Solution 1: 
+### Solution 1: Transform to 2Sum
 **Explanation**:  
-**Time Complexity**: 
-**Space Complexity**: 
+Traverse the given list from left to right and then find two items from the remaining list which the sum of these two 
+items is equal to the minus of traversed item. The differences between 3Sum and 2Sum are:
+1. 3Sum needs to find all the combinations without duplicates
+2. 3Sum return value combinations, 2Sum return index combinations, which means that we can't sort in 2Sum or we should 
+   use more space to store index information in 2Sum.
+   
+**Time Complexity**: O(n^3)  (Since there is a check operation which is O(n))  
+**Space Complexity**: O(n)
 ``` python
-
+class Solution:
+    def threeSum(self, nums: List[int]) -> List[List[int]]:
+        res = []
+        for index, value in enumerate(nums[:-2]):
+            # 2Sum: target = -value
+            history = {}
+            for i in range(index+1,len(nums)):
+                if -value-nums[i] in history:
+                    temp = [value, -value-nums[i], nums[i]]
+                    # In order to remove duplicate, we should sort and check
+                    temp.sort()
+                    if temp in res: 
+                        continue
+                    res.append(temp)
+                else:
+                    history[nums[i]] = i
+        return res
 ```
 
-### Solution 2
-**Explanation**:  
-**Time Complexity**: 
-**Space Complexity**: 
+### Solution 2: Two Pointers
+**Explanation**: Sort the given list in order to make it easier to remove duplicates. Then traverse the list from left 
+to right and use left-right two pointers to find the combinations.  
+**Time Complexity**: O(n^2)  
+**Space Complexity**: O(n)
 ``` python
-
+class Solution:
+    def threeSum(self, nums: List[int]) -> List[List[int]]:
+        nums.sort()
+        res = []
+        
+        for i in range(len(nums)-2):
+            # Since nums is ordered, and if nums[i]>0, there will be no j,k made nums[i]+nums[j]+nums[k] == 0
+            if nums[i]>0:
+                return res
+            # Skip duplicate i
+            if i>0 and nums[i] == nums[i-1]:
+                continue
+            # Use left-right two pointers
+            j = i+1
+            k = len(nums)-1
+            while j<k:
+                if nums[i]+nums[j]+nums[k] == 0:
+                    res.append([nums[i],nums[j],nums[k]])
+                    # Skip duplicate j
+                    while j+1<k and nums[j] == nums[j+1]:
+                        j += 1
+                    j += 1
+                    # Skip duplicate k
+                    while k-1>j and nums[k] == nums[k-1]:
+                        k -= 1
+                    k -= 1 
+                elif nums[i]+nums[j]+nums[k] < 0:
+                    j += 1
+                else:
+                    k -= 1
+        return res
 ```
 
 ### Summary
-1. 
-2. 
+1. Two kinds of two pointers: 
+    * One slow-runner and the other fast-runner
+    * One pointer starts from the beginning while the other pointer starts from the end
